# stoll-assist

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
docs/: ADR-001-stack.md  ADR-002-identity-and-transparency.md  evaluation-seed.csv  roadmap.md
scripts/: apply-migrations.ps1  test-async-processing.ps1  test-conversation-state.ps1  test-knowledge-base.ps1  test-normalization.ps1  test-outbox-review.ps1  test-policy-engine.ps1  test-response-planner.ps1  test-response-verifier.ps1  test-webhook.ps1
services/api/: Dockerfile  pyproject.toml
services/api/app/: auth.py  bootstrap_owner.py  database.py  main.py  normalization.py  policy_engine.py  queue.py  schemas.py  security.py  settings.py  webhooks.py  whatsapp_provider.py  worker.py
services/api/app/repositories/: conversations.py  knowledge.py  messages.py  operator_dashboard.py  outbox.py  policies.py  response_generations.py  response_plans.py  response_verifications.py  webhook_events.py
services/api/app/routers/: auth.py  conversations.py  dashboard.py  knowledge.py  outbox.py  planner.py  policies.py  users.py  verifier.py
services/api/app/services/: conversation_state.py  drafting_provider_factory.py  drafting_providers.py  llm_drafting.py  outbound_pipeline.py  policy_service.py  response_planner.py  response_verifier.py  webhook_processor.py  whatsapp_sender.py
services/api/tests/: auth_helpers.py  test_dashboard_auth.py  test_llm_drafting_pipeline.py  test_operator_dashboard_endpoints.py  test_outbox_review_pipeline.py  test_whatsapp_webhook_and_send.py
(+36 files in other folders)
