[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stoll-assist-api"
version = "0.1.0"
description = "Multi-tenant WhatsApp lead qualification and human handoff service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
  "redis>=5.2",
  "httpx>=0.28",
  "openai>=1.70",
  "boto3>=1.36",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0",
  "pwdlib[argon2]>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
  "mypy>=1.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["config*", "tests*"]
namespaces = false
